fix: resolve delete chat and improve all message endpoints
- Fixed delete chat not hiding from getMyChats (added isActive filtering)
- Standardized authentication using Security Authentication context in MessageController
- Added isActive field + soft delete support to Message entity
- Improved MessageService with proper active message filtering and error handling
- Enhanced ChatService & ChatRepository with active-only queries
- Better logging and exception usage across chat/message flows

Closes message endpoint issues